--- a/src/styles/components/_ProjectCard.scss
+++ b/src/styles/components/_ProjectCard.scss
@@ -1,14 +1,11 @@
 .project-card {
     max-width: 300px;
     max-height: fit-content;
+    height: fit-content;
     cursor: pointer;
   
     &__image {
       max-width: 100%;
       height: auto;
     }
-    &:hover {
-        
-    }
   }
-  
